--- a/charts/node/tests/engine_settings_test.yaml
+++ b/charts/node/tests/engine_settings_test.yaml
@@ -16,3 +16,21 @@ tests:
     asserts:
       - hasDocuments:
           count: 0
+  - it: should specify backup nodes if set
+    set:
+      engine.settings.eth_backup.enabled: true
+      engine.settings.eth_backup.ws_node_endpoint: "ws://test"
+      engine.settings.eth_backup.http_node_endpoint: "http://test"
+      engine.settings.dot_backup.enabled: true
+      engine.settings.dot_backup.ws_node_endpoint: "ws://test"
+      engine.settings.dot_backup.http_node_endpoint: "http://test"
+      engine.settings.btc_backup.enabled: true
+      engine.settings.btc_backup.http_node_endpoint: "http://test"
+      engine.settings.btc_backup.rpc_user: "test"
+      engine.settings.btc_backup.rpc_password: "test"
+    asserts:
+      - hasDocuments:
+          count: 1
+      - matchRegex:
+          path: data['Settings.toml']
+          pattern: "[(eth|dot|btc)].backup_rpc"
