--- a/charts/node/templates/node-statefulset.yaml
+++ b/charts/node/templates/node-statefulset.yaml
@@ -27,6 +27,7 @@ spec:
         {{- if .Values.network.chain.chainspecUrl }}
         - name: download-chainspec
           image: curlimages/curl:latest
+          imagePullPolicy: {{ .Values.node.image.pullPolicy }}
           command:
             - /bin/sh
             - -c
