--- a/charts/node/tests/engine_settings_test.yaml
+++ b/charts/node/tests/engine_settings_test.yaml
@@ -19,13 +19,13 @@ tests:
   - it: should specify backup nodes if set
     set:
       engine.settings.eth_backup.enabled: true
-      engine.settings.eth_backup.ws_node_endpoint: "ws://test"
-      engine.settings.eth_backup.http_node_endpoint: "http://test"
+      engine.settings.eth_backup.ws_endpoint: "ws://test"
+      engine.settings.eth_backup.http_endpoint: "http://test"
       engine.settings.dot_backup.enabled: true
-      engine.settings.dot_backup.ws_node_endpoint: "ws://test"
-      engine.settings.dot_backup.http_node_endpoint: "http://test"
+      engine.settings.dot_backup.ws_endpoint: "ws://test"
+      engine.settings.dot_backup.http_endpoint: "http://test"
       engine.settings.btc_backup.enabled: true
-      engine.settings.btc_backup.http_node_endpoint: "http://test"
+      engine.settings.btc_backup.http_endpoint: "http://test"
       engine.settings.btc_backup.rpc_user: "test"
       engine.settings.btc_backup.rpc_password: "test"
     asserts:
