--- a/charts/node/tests/values/happy.values.yaml
+++ b/charts/node/tests/values/happy.values.yaml
@@ -6,12 +6,12 @@ engine:
     node_p2p:
       ip_address: "172.20.1.1"
     eth:
-      ws_node_endpoint: "test"
-      http_node_endpoint: "test"
+      ws_endpoint: "test"
+      http_endpoint: "test"
     dot:
-      ws_node_endpoint: "test"
-      http_node_endpoint: "test"
+      ws_endpoint: "test"
+      http_endpoint: "test"
     btc:
-      http_node_endpoint: "test"
+      http_endpoint: "test"
       rpc_user: "flip"
       rpc_password: "flip"
