--- a/charts/node/tests/values/happy.values.yaml
+++ b/charts/node/tests/values/happy.values.yaml
@@ -13,5 +13,5 @@ engine:
       http_endpoint: "test"
     btc:
       http_endpoint: "test"
-      rpc_user: "flip"
-      rpc_password: "flip"
+      basic_auth_user: "flip"
+      basic_auth_password: "flip"
