Updated configmap with new parameters

--- a/charts/node/templates/engine-cm.yaml
+++ b/charts/node/templates/engine-cm.yaml
@@ -21,15 +21,13 @@ data:
     [eth]
     # Ethereum private key file path. Default is the docker secrets path. This file should contain a hex-encoded private key.
     private_key_file = "{{ .Values.common.keys.keysPath }}/{{ .Values.common.keys.ethereumKeyFileName }}"
-
-    [eth.rpc]
-    ws_endpoint = "{{ required "Please provide a ws_endpoint of an Ethereum node" .Values.engine.settings.eth.ws_endpoint }}"
-    http_endpoint = "{{ required "Please provide a http_endpoint of an Ethereum node" .Values.engine.settings.eth.http_endpoint }}"
+    ws_node_endpoint = "{{ required "Please provide a ws_node_endpoint of an Ethereum node" .Values.engine.settings.eth.ws_node_endpoint }}"
+    http_node_endpoint = "{{ required "Please provide a http_node_endpoint of an Ethereum node" .Values.engine.settings.eth.http_node_endpoint }}"
 
     {{ if .Values.engine.settings.eth_backup.enabled }}
     [eth.backup_rpc]
-    http_endpoint = "{{ .Values.engine.settings.eth_backup.http_endpoint }}"
-    ws_endpoint = "{{ .Values.engine.settings.eth_backup.ws_endpoint }}"
+    http_node_endpoint = "{{ .Values.engine.settings.eth_backup.http_node_endpoint }}"
+    ws_node_endpoint = "{{ .Values.engine.settings.eth_backup.ws_node_endpoint }}"
     {{- end }}
 
     {{ if .Values.engine.ports.healthcheck.enabled }}
@@ -41,24 +39,24 @@ data:
     [signing]
     db_file = "{{ .Values.common.basePath }}/data.db"
 
-    [dot.rpc]
-    ws_endpoint = "{{ required "Please provide a ws_endpoint of an Polkadot node" .Values.engine.settings.dot.ws_endpoint }}"
-    http_endpoint = "{{ required "Please provide a http_endpoint of an Polkadot node" .Values.engine.settings.dot.http_endpoint }}"
+    [dot]
+    ws_node_endpoint = "{{ required "Please provide a ws_node_endpoint of an Polkadot node" .Values.engine.settings.dot.ws_node_endpoint }}"
+    http_node_endpoint = "{{ required "Please provide a http_node_endpoint of an Polkadot node" .Values.engine.settings.dot.http_node_endpoint }}"
 
     {{ if .Values.engine.settings.dot_backup.enabled }}
     [dot.backup_rpc]
-    http_endpoint = "{{ .Values.engine.settings.dot_backup.http_endpoint }}"
-    ws_endpoint = "{{ .Values.engine.settings.dot_backup.ws_endpoint }}"
+    http_node_endpoint = "{{ .Values.engine.settings.dot_backup.http_node_endpoint }}"
+    ws_node_endpoint = "{{ .Values.engine.settings.dot_backup.ws_node_endpoint }}"
     {{- end }}
 
-    [btc.rpc]
-    http_endpoint = "{{ required "Please provide a http_endpoint of an Bitcoin node" .Values.engine.settings.btc.http_endpoint }}"
-    basic_auth_user = "{{ .Values.engine.settings.btc.basic_auth_user }}"
-    basic_auth_password = "{{ .Values.engine.settings.btc.basic_auth_password }}"
+    [btc]
+    http_node_endpoint = "{{ required "Please provide a http_node_endpoint of an Bitcoin node" .Values.engine.settings.btc.http_node_endpoint }}"
+    rpc_user = "{{ .Values.engine.settings.btc.basic_auth_user }}"
+    rpc_password = "{{ .Values.engine.settings.btc.basic_auth_password }}"
 
     {{ if .Values.engine.settings.btc_backup.enabled }}
     [btc.backup_rpc]
-    http_endpoint = "{{ .Values.engine.settings.btc_backup.http_endpoint }}"
+    http_node_endpoint = "{{ .Values.engine.settings.btc_backup.http_node_endpoint }}"
     rpc_user = "{{ .Values.engine.settings.btc_backup.rpc_user }}"
     rpc_password = "{{ .Values.engine.settings.btc_backup.rpc_password }}"
     {{- end }}
