--- a/charts/node/templates/engine-statefulset.yaml
+++ b/charts/node/templates/engine-statefulset.yaml
@@ -1,5 +1,3 @@
-{{- $lrsGtCurrent := (lt (semver .Values.engine.image.lsr_tag | (semver .Values.engine.image.current_tag).Compare) 0) }}
-{{- $migrationMode := .Values.engine.settings.migration_mode -}}
 {{- if eq .Values.common.role "validator" }}
 apiVersion: apps/v1
 kind: StatefulSet
@@ -98,7 +96,7 @@ spec:
               readOnly: true
             - name: settings
               mountPath: {{ .Values.common.basePath }}/config
-              readOnly: true
+              readOnly: false
           {{- with .Values.engine.extraEnv }}
           env:
           {{- toYaml . | nindent 12 }}
@@ -107,33 +105,34 @@ spec:
           envFrom:
           {{- toYaml . | nindent 12 }}
           {{- end }}
-        {{- if $lrsGtCurrent }}
-        - name: chainflip-engine-lsr
-          image: "{{ include "chainflip-engine-lsr.image" . }}"
+        {{- if .Values.runtime_upgrade_mode.enabled }}
+        - name: chainflip-engine-prv
+          image: "{{ include "chainflip-engine-prv.image" . }}"
           imagePullPolicy: {{ .Values.engine.image.pullPolicy }}
           command:
             - /usr/local/bin/chainflip-engine
+            - --p2p.port={{ .Values.runtime_upgrade_mode.previous_engine_port }}
           args:
             - --config-root={{ .Values.common.basePath }}
           {{- with .Values.engine.extraArgs }}
           {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
-            - containerPort: {{ add .Values.engine.ports.ip.port 1 }}
-              name: ip-lsr
+            - containerPort: {{ .Values.runtime_upgrade_mode.previous_engine_port }}
+              name: ip-prv
               protocol: TCP
             {{- if .Values.engine.ports.metrics.enabled }}
             - containerPort: {{ .Values.engine.ports.metrics.port }}
-              name: metrics-lsr
+              name: metrics-prv
               protocol: TCP
             {{- end }}
             {{- if  .Values.engine.ports.healthcheck.enabled }}
             - containerPort: {{ .Values.engine.ports.healthcheck.port }}
-              name: healthcheck-lsr
+              name: healthcheck-prv
           readinessProbe:
             httpGet:
               path: /health
-              port: healthcheck-lsr
+              port: healthcheck-prv
             initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 5
@@ -142,30 +141,30 @@ spec:
           livenessProbe:
             httpGet:
               path: /health
-              port: healthcheck-lsr
+              port: healthcheck-prv
             initialDelaySeconds: 10
             periodSeconds: 10
             timeoutSeconds: 5
             successThreshold: 1
             failureThreshold: 3
             {{- end }}
-          {{- with .Values.engine.resources }}
-          resources:
-          {{- toYaml . | nindent 12 }}
-          {{- end }}
+{{/*          {{- with .Values.engine.resources }}*/}}
+{{/*          resources:*/}}
+{{/*          {{- toYaml . | nindent 12 }}*/}}
+{{/*          {{- end }}*/}}
           volumeMounts:
             - name: data
               mountPath: {{ .Values.common.basePath }}
             - name: keys
               mountPath: {{ .Values.common.keys.keysPath }}
               readOnly: true
-          {{- if $migrationMode }}
-            - name: settings-lsr
-          {{- else}}
+            {{- if .Values.runtime_upgrade_mode.engine_settings.existingConfigMap }}
+            - name: settings-prv
+            {{- else }}
             - name: settings
-          {{- end }}
+            {{- end }}
               mountPath: {{ .Values.common.basePath }}/config
-              readOnly: true
+              readOnly: false
           {{- with .Values.engine.extraEnv }}
           env:
           {{- toYaml . | nindent 12 }}
@@ -194,13 +193,10 @@ spec:
             items:
               - key: Settings.toml
                 path: Settings.toml
-        {{- if and $migrationMode $lrsGtCurrent }}
-        - name: settings-lsr
+        {{- if and .Values.runtime_upgrade_mode.enabled .Values.runtime_upgrade_mode.engine_settings.existingConfigMap }}
+        - name: settings-prv
           configMap:
-            name: {{ .Values.engine.settings.existingConfigMap | default (include "chainflip-engine.fullname" .) }}
-            items:
-              - key: lsr.Settings.toml
-                path: Settings.toml
+            name: {{ .Values.runtime_upgrade_mode.engine_settings.existingConfigMap }}
         {{- end}}
         - name: keys
           secret:
