--- a/charts/node/tests/engine_test.yaml
+++ b/charts/node/tests/engine_test.yaml
@@ -1,6 +1,8 @@
 suite: chainflip-engine tests
 templates:
   - engine-statefulset.yaml
+values:
+  - values/happy.values.yaml
 tests:
   - it: should template the node statefulset
     asserts:
