--- a/charts/node/tests/values/happy.values.yaml
+++ b/charts/node/tests/values/happy.values.yaml
@@ -2,6 +2,9 @@ network:
   chain:
     name: test
 engine:
+  image:
+    current_tag: 0.9.3
+    previous_tag: 0.9.3
   settings:
     node_p2p:
       ip_address: "172.20.1.1"
