--- a/charts/node/templates/engine-cm.yaml
+++ b/charts/node/templates/engine-cm.yaml
@@ -63,6 +63,16 @@ data:
     rpc_password = "{{ .Values.engine.settings.btc_backup.rpc_password }}"
     {{- end }}
 
+    [arb.rpc]
+    http_endpoint = "{{ required "Please provide a http_endpoint of an Arbitrum node" .Values.engine.settings.arb.http_endpoint }}"
+    ws_endpoint = "{{ required "Please provide a ws_endpoint of an Arbitrum node" .Values.engine.settings.arb.ws_endpoint }}"
+
+    {{ if .Values.engine.settings.arb_backup.enabled }}
+    [arb.backup_rpc]
+    http_endpoint = "{{ .Values.engine.settings.arb_backup.http_endpoint }}"
+    ws_endpoint = "{{ .Values.engine.settings.arb_backup.ws_endpoint }}"
+    {{- end }}
+
     {{- if .Values.engine.ports.metrics.enabled }}
     [prometheus]
     hostname = "{{ .Values.engine.ports.metrics.hostname }}"
