--- a/charts/node/values.yaml
+++ b/charts/node/values.yaml
@@ -428,6 +428,26 @@ engine:
       # -- bitcoin backup rpc password
       rpc_password: ""
 
+    arb:
+      # -- enabled
+      enabled: false
+
+      # -- arb node ws endpoint
+      ws_endpoint: ""
+
+      # -- arb node http endpoint
+      http_endpoint: ""
+
+    arb_backup:
+      # -- enabled
+      enabled: false
+
+      # -- arb node ws endpoint
+      ws_endpoint: ""
+
+      # -- arb node http endpoint
+      http_endpoint: ""
+
   livenessProbe:
     # -- enable liveness probe
     enabled: true
