--- a/charts/node/tests/values/happy.values.yaml
+++ b/charts/node/tests/values/happy.values.yaml
@@ -15,3 +15,6 @@ engine:
       http_endpoint: "test"
       basic_auth_user: "flip"
       basic_auth_password: "flip"
+    arb:
+      ws_endpoint: "test"
+      http_endpoint: "test"
