--- a/charts/node/templates/engine-statefulset.yaml
+++ b/charts/node/templates/engine-statefulset.yaml
@@ -127,12 +127,16 @@ spec:
           secret:
             secretName: {{ .Values.common.keys.existingSecret | default (include "node.fullname" . ) }}
             items:
+              {{- with .Values.common.keys -}}
               - key: node-key
-                path: node_key_file
+                path: {{ .nodeKeyFileName }}
               - key: signing-key
-                path: signing_key_file
+                path: {{ .signingKeyFileName }}
               - key: ethereum-key
-                path: ethereum_key_file
+                path: {{ .ethereumKeyFileName }}
+              - key: arbitrum-key
+                path: {{ .arbitrumKeyFileName }}
+              {{- end }}
         {{- if .Values.engine.persistence.existingClaim }}
         - name: data
           persistentVolumeClaim:
