chore: user docker.io prefix for chainflip-bins

--- a/charts/broker-api/values.yaml
+++ b/charts/broker-api/values.yaml
@@ -2,7 +2,7 @@
 image:
 
   # -- set the repository name
-  repository: chainfliplabs/chainflip-broker-api
+  repository: docker.io/chainfliplabs/chainflip-broker-api
 
   # -- set the pull policy
   pullPolicy: IfNotPresent
