--- a/charts/node/templates/engine-statefulset.yaml
+++ b/charts/node/templates/engine-statefulset.yaml
@@ -119,6 +119,10 @@ spec:
       tolerations:
           {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.engine.topologySpreadConstraints }}
+      topologySpreadConstraints:
+          {{- toYaml . | nindent 8 }}
+      {{- end }}
       volumes:
         - name: settings
           configMap:
