--- a/charts/node/templates/node-statefulset.yaml
+++ b/charts/node/templates/node-statefulset.yaml
@@ -181,6 +181,10 @@ spec:
       tolerations:
           {{- toYaml . | nindent 8 }}
       {{- end }}
+      {{- with .Values.node.topologySpreadConstraints }}
+      topologySpreadConstraints:
+          {{- toYaml . | nindent 8 }}
+      {{- end }}
       volumes:
         {{- if eq .Values.common.role "validator" }}
         - name: keys
